manual/cluster-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  labels:
    name: cluster-ingress
spec:
  rules:
  - host: nextcloud.local
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: nextcloud-server
            port: 
              number: 80
